[project]
name = "mm_reranker_eval"
version = "0.1.0"
description = "A unified package for evaluating multimodal reranking models"
authors = [
    {name = "Wang Shijian"}
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["multimodal", "reranking", "evaluation", "retrieval", "cross-modal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.47.3",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
flash-attention = ["flash-attn>=2.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "setuptools",
    "wheel",
    "packaging",
    "ninja; platform_system != 'Windows'",
]
build-backend = "setuptools.build_meta"

[project.scripts]
mmranker = "mm_reranker_eval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mm_reranker_eval*"]

[tool.setuptools]
zip-safe = false

[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "packaging",
]
build-backend = "setuptools.build_meta"